# dc-verifier

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.dev  LICENSE  README.md  TESTING.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
crates/dc-adapter-fastapi/: Cargo.toml
crates/dc-adapter-fastapi/src/: call_graph.rs  dynamic_routes.rs  extractor.rs  lib.rs  pydantic.rs  utils.rs
crates/dc-adapter-nestjs/: Cargo.toml
crates/dc-adapter-nestjs/src/: call_graph.rs  decorators.rs  dto.rs  extractor.rs  lib.rs
crates/dc-cli/: Cargo.toml
crates/dc-cli/src/: config.rs  lib.rs  main.rs
crates/dc-cli/src/commands/: check.rs  init.rs  visualize.rs
crates/dc-cli/src/reporters/: json.rs  markdown.rs
crates/dc-cli/tests/: integration_fastapi_project_test.rs  integration_ts_zod_openapi_test.rs  reporters_snapshot_test.rs  reporters_test.rs  strict_imports_cli_test.rs
crates/dc-core/: Cargo.toml
crates/dc-core/benches/: call_graph_bench.rs
crates/dc-core/src/: entry_point.rs  lib.rs
crates/dc-core/src/analyzers/: chain.rs  contract.rs  rules.rs  schema_parser.rs
crates/dc-core/src/cache/: store.rs
crates/dc-core/src/call_graph/: builder.rs  decorator.rs  edge.rs  extractor.rs  graph.rs  mod.rs  node.rs  (+1 more)
crates/dc-core/tests/: chain_typescript_test.rs  python_imports_test.rs  zod_to_pydantic_chain_test.rs
crates/dc-typescript/: Cargo.toml
crates/dc-typescript/src/: call_graph.rs  lib.rs  path_resolver.rs  zod.rs
crates/dc-typescript/tests/: integration_test.rs
examples/python-react/: dc-verifier.toml
(+32 files in other folders)
