[package]
name = "dc-adapter-nestjs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dc-core = { path = "../dc-core" }
dc-typescript = { path = "../dc-typescript" }
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile = "3.10"

